# oopsie

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  Makefile  Procfile  README.md  SECURITY.md  docker-compose.yml  oopsie-implementation-plan.md  pyproject.toml  run_worker.py
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-reviewer.md
.claude/commands/: commit-title.md
.claude/hooks/: block-sensitive-files.sh  format-python.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  image-cleanup.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_error_occurrences.py  003_add_users_and_project_ownership.py  004_add_orgs_memberships_invitations.py  005_drop_project_user_id_tighten_invitation_uq.py  006_add_github_installations.py  007_drop_github_token_encrypted.py  008_add_anthropic_api_key_encrypted.py  008_add_merged_fix_attempt_status.py  009_add_signup_requests_and_org_creation_invitations.py  010_add_signup_request_constraints.py  011_single_org_per_user.py  012_add_error_context_columns.py  2f23da1ebac2_drop_revoked_tokens_table.py  ac0f5981e929_add_exception_chain_and_execution_.py  fc31076df9ee_make_github_account_login_nullable_and_.py
k8s/base/: cloudflared-configmap.yaml  cloudflared-deployment.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  redis-service.yaml  redis-statefulset.yaml  secrets-generator.yaml  secrets.enc.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml
oopsie/: __init__.py  auth.py  auth_middleware.py  auth_routes.py  config.py  database.py  deps.py  exceptions.py  github_routes.py  logging.py  main.py  queue.py  session.py
oopsie/api/: deps.py  errors.py  projects.py
oopsie/middleware/: csrf.py  org_slug.py  request_body_limit.py  request_logging.py
oopsie/models/: __init__.py  base.py  error.py  error_occurrence.py  fix_attempt.py  github_installation.py  invitation.py  membership.py  org_creation_invitation.py  organization.py  project.py  revoked_token.py  signup_request.py  user.py
oopsie/routers/: __init__.py  auth.py  dependencies.py  github.py
oopsie/schemas/: context.py  errors.py
oopsie/services/: anthropic_key_service.py  bootstrap_service.py  claude_service.py  error_service.py  exceptions.py  fix_service.py  github_app_service.py  github_installation_service.py  github_service.py  installation_service.py  invitation_service.py  membership_service.py  pipeline_service.py  project_service.py  prompt_service.py  signup_request_service.py
oopsie/utils/: encryption.py  fingerprint.py  slug.py
oopsie/web/: __init__.py  admin.py  errors.py  github.py  landing.py  members.py  projects.py  settings.py
oopsie/worker/: __init__.py  fix_pipeline.py  settings.py
scripts/: console.py
static/css/: app.css
templates/: base.html  landing.html
templates/admin/: signup_requests.html
templates/auth/: login.html  signing_in.html
templates/members/: list.html
templates/projects/: api_key.html  created.html  error_show.html  errors.html  form.html  list.html
templates/settings/: index.html
tests/: conftest.py  factories.py  test_auth.py  test_auth_middleware.py  test_auth_registration.py  test_config.py  test_database.py  test_fingerprint.py  test_queue.py  test_session.py
tests/api/: conftest.py  test_errors.py  test_main.py  test_projects.py  test_rbac_deps.py
tests/middleware/: test_org_slug.py  test_request_body_limit.py
tests/models/: conftest.py  test_error.py  (+8 more)
(+49 files in other folders)
